In game-play and game-deploy components fixed display bug: status data display is shifted;

--- a/Battleships.AppWeb/AppClient/src/app/app-game/game-play/game-play.component.css
+++ b/Battleships.AppWeb/AppClient/src/app/app-game/game-play/game-play.component.css
@@ -9,6 +9,10 @@ button {
   width: 66%;
 }
 
+.gameStatus .row {
+  padding-left: 20px;
+}
+
 .gameHeaderPic {
   background-position: center;
   background-repeat: no-repeat;
